# bytesized

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: tests.yml
assets/shaders/: sprite.frag  sprite.vert
bytesized_assets/shaders/: anim.frag  fresnel.glsl  linear_depth.glsl  object.frag  object.vert  text.frag  texture.frag
bytesized_com/: CMakeLists.txt
bytesized_com/include/: com_thread.h  socket.h
bytesized_com/src/: com_thread.cpp  socket.cpp
bytesized_embed/include/: dex.h  embed.h
bytesized_embed/src/: embed.cpp  embed_main.cpp
bytesized_embed/tests/: CMakeLists.txt  test_embed.cpp
bytesized_engine/: CMakeLists.txt
bytesized_engine/assets/shaders/: anim.frag  object.frag  screen.vert  text.frag
bytesized_engine/include/: builtin_shader.h  clicknpick.h  component.h  editor.h  engine.h  gpu_primitive.h  gpu_shader.h  panel.h  playercontroller.h  runtime.h  skydome.h  sprite.h
bytesized_engine/src/: builtin_shader.cpp  console.cpp  engine.cpp  gpu_primitive.cpp  gpu_shader.cpp  panel.cpp  persist.cpp  playercontroller.cpp  playerinput.cpp  runtime.cpp  skydome.cpp  sprite.cpp
bytesized_import/: import.cpp  import.h
bytesized_lib/: CMakeLists.txt
bytesized_lib/include/: assets.h  blur_renderer.h  bytesized_info.h  clicknpick.h  frame.h  geom_collision.h  geom_convexhull.h  geom_primitive.h  gpu.h  gpu_primitive.h  gpu_skinning.h  gpu_texture.h  json.hpp  library.h  library_types.h  logging.h  primer.h  recycler.hpp  sprite.h  text_field.h  vertexobject.h  window.h
bytesized_lib/src/: bdf.cpp  blur_renderer.cpp  camera.cpp  ecs.cpp  filesystem.cpp  frame.cpp  geom_collision.cpp  geom_sphere.cpp  gpu.cpp  gpu_primitive.cpp  gpu_skinning.cpp  gpu_texture.cpp  library.cpp  simplex_noise.cpp  skydome.cpp  sprite.cpp  text.cpp  texture.cpp  trs.cpp  window.cpp
cmake/: API.cmake
embed/: CMakeLists.txt  embed.c  embed.h
embed/assets/shaders/: anim.vert  billboard.vert  object.frag  object.vert  text.frag  text.vert  texture.frag  ui.vert
embed/src/: embed.cpp
import/: CMakeLists.txt
include/: animation.h  assets.h  bdf.h  camera.h  cameraview.h  character.h  clicknpick.h  color.h  component.h  console.h  debug.hpp  dexterity.h  ecs.h  editor.h  engine.h  filesystem.h  frame.h  geom_primitive.h  gltf.hpp  gpu.h  gpu_primitive.h  gui.h  halfedge.h  json.hpp  library.h  library_types.h  logging.h  persist.h  physics.h  platformer.h  playerinput.h  polygonize.h  primer.h  primitive.h  recycler.hpp  shader.h  simplex_noise.h  skydome.h  sprite.h  systime.h  (+5 more)
src/: animation.cpp  assets.cpp  bdf.cpp  camera.cpp  collision_primitive.cpp  color.cpp  console.cpp  ecs.cpp  editor.cpp  engine.cpp  filesystem.cpp  geom_aabb.cpp  geom_convexhull.cpp  geom_obb.cpp  geom_plane.cpp  geom_primitive.cpp  geom_sphere.cpp  gpu.cpp  gpu_primitive.cpp  gui.cpp  library.cpp  persist.cpp  physics.cpp  platformer.cpp  polygonize.cpp  primitive.cpp  shader.cpp  skydome.cpp  sprite.cpp  text.cpp  time.cpp  timer.cpp  trs.cpp  uniform.cpp  window.cpp
stb/: stb_image.cpp  stb_image.h  stb_image_write.h
tests/: CMakeLists.txt  test_ecs.cpp  test_embed.cpp  test_geom_primitives.cpp  test_persist.cpp  test_primer.cpp  test_recycler.cpp
